# wmm2025C

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE_WMM.txt  Makefile  README.md  test_wmm_mag.c  wmm_mag.c  wmm_mag.h  wmm_mag_struct.h
.github/workflows/: cmake-multi-platform.yml
